--- a/.github/workflows/deploy-blog-to-s3.yml
+++ b/.github/workflows/deploy-blog-to-s3.yml
@@ -29,15 +29,33 @@ jobs:
           node-version: '20'
           cache: 'npm'
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v3
+        with:
+          version: 8
+
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+      - name: Setup pnpm cache
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+
       - name: Install dependencies
         run: |
           echo "📦 Installing dependencies..."
-          npm ci
+          pnpm install --frozen-lockfile
 
       - name: Build Astro site
         run: |
           echo "🏗️ Building Astro site..."
-          npm run build
+          pnpm run build
           echo "✅ Build complete!"
 
       - name: Configure AWS credentials
