--- a/.github/workflows/deploy-blog-to-s3.yml
+++ b/.github/workflows/deploy-blog-to-s3.yml
@@ -27,35 +27,16 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v3
-        with:
-          version: 8
-
-      - name: Get pnpm store directory
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-
-      - name: Setup pnpm cache
-        uses: actions/cache@v4
-        with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
 
       - name: Install dependencies
         run: |
           echo "📦 Installing dependencies..."
-          pnpm install --frozen-lockfile
+          npm ci
 
       - name: Build Astro site
         run: |
           echo "🏗️ Building Astro site..."
-          pnpm run build
+          npm run build
           echo "✅ Build complete!"
 
       - name: Configure AWS credentials
