--- a/.github/workflows/deploy-blog-to-s3.yml
+++ b/.github/workflows/deploy-blog-to-s3.yml
@@ -4,10 +4,10 @@ on:
   push:
     branches: [main]
     paths:
-      - 'src/**'
-      - 'public/**'
-      - 'astro.config.mjs'
-      - 'package.json'
+      - 'blog/src/**'
+      - 'blog/public/**'
+      - 'blog/astro.config.mjs'
+      - 'blog/package.json'
       - '.github/workflows/deploy-blog-app.yml'
   workflow_dispatch:
 
@@ -18,6 +18,10 @@ permissions:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    
+    defaults:
+      run:
+        working-directory: blog
     
     steps:
       - name: Checkout code
@@ -31,7 +35,7 @@ jobs:
       - name: Install dependencies
         run: |
           echo "📦 Installing dependencies..."
-          npm i
+          npm install
 
       - name: Build Astro site
         run: |
