--- a/.github/workflows/deploy-blog-to-s3.yml
+++ b/.github/workflows/deploy-blog-to-s3.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          role-to-assume: ${{ secrets.BLOG_ROLE_ARN }}
           role-session-name: GitHubActions-BlogDeploy-${{ github.run_number }}
           aws-region: ${{ secrets.AWS_REGION }}
 
