--- a/trackstack/app/package.json
+++ b/trackstack/app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "@vite-pwa/astro": "^1.1.1",
     "astro": "^5.15.7",
     "tailwindcss": "^4.1.17"
   }
